remove prod_key.pem

--- a/.github/workflows/cypress-prod.yml
+++ b/.github/workflows/cypress-prod.yml
@@ -10,12 +10,11 @@ jobs:
         uses: actions/checkout@v4
       - name: scp a producció
         run: | 
-          chmod 600 ./prod_key.pem
           cd ./nuxt-project
           npm install 
           npm run build
           cd ${{ github.workspace }}
-          scp -r -o stricthostchechecking=no -o UserKnownHostsFile=/dev/null -i "./prod_key.pem" ./nuxt-project/dist/* ${{ secrets.PROD_USER }}@${{ secrets.PROD_HOST }}:/home/a21rublormar/web/cypress-app-example.daw.inspedralbes.cat/public_html/web/
+          scp -r -o stricthostchechecking=no -o UserKnownHostsFile=/dev/null -i ./nuxt-project/dist/* ${{ secrets.PROD_USER }}@${{ secrets.PROD_HOST }}:/home/a21rublormar/web/cypress-app-example.daw.inspedralbes.cat/public_html/web/
           
       - name: Cypress run
         uses: cypress-io/github-action@v5
